# brvm_package

./: .env  .gitignore  .validation_db.sqlite3  .validation_db_multi.sqlite3  README.md  TODO.md  benchmark_sources.py  brvm_equities.xlsx  build_equity_excel.py  compare_all_histories.py  compare_history.py  pyproject.toml  rb_fondamental.html  sample_history_report.json  screener_check.py  sika_nav.py  test_deep_history.py  test_extraction.py  test_fundamentals.py  truth_check.py  validate_package.py  validation_report.txt
.mpl-cache/: fontlist-v390.json
data/: brvm_financials_2020_2025.csv  brvm_financials_2020_2025.xlsx
data/brvm_financials_cache/ocr/: air-liquide-ci-2011-12.json  air-liquide-ci-2012-10.json  air-liquide-ci-2012-11.json  air-liquide-ci-2013-8.json  air-liquide-ci-2013-9.json  air-liquide-ci-2014-7.json  air-liquide-ci-2016-5.json  air-liquide-ci-2016-6.json  air-liquide-ci-2017-4.json  air-liquide-ci-2018-3.json  air-liquide-ci-2019-1.json  air-liquide-ci-2019-2.json  bank-of-africa-bf-2020-12.json  bank-of-africa-bf-2021-10.json  bank-of-africa-bf-2021-11.json  bank-of-africa-bf-2021-8.json  bank-of-africa-bf-2021-9.json  bank-of-africa-bf-2022-6.json  bank-of-africa-bf-2022-7.json  bank-of-africa-bf-2023-4.json  bank-of-africa-bf-2023-5.json  bank-of-africa-bf-2024-3.json  bank-of-africa-bf-2025-1.json  bank-of-africa-bf-2025-2.json  bank-of-africa-bn-2012-12.json  bank-of-africa-bn-2013-11.json  bank-of-africa-bn-2015-10.json  (+114 more)
dist-validate/: brvm_package-0.1.0-py3-none-any.whl
scripts/: brvm_pdf_ocr.swift  extract_brvm_financials.py  split_pdf_pages.swift
src/brvm/: __init__.py
src/brvm_package/: __init__.py
tests/: test_extended_api.py  test_metadata_and_cli.py  test_packaging_and_sync.py  test_public_api.py
(+640 files in other folders)
