[project]
name = "brvm-package"
version = "0.2.0"
description = "Python toolkit for BRVM market data, fundamentals, portfolio analytics, screening, and backtesting."
readme = "README.md"
authors = [
    { name = "Naofal AKANHO", email = "nflakanho@gmail.com" }
]
requires-python = ">=3.12"
keywords = ["brvm", "finance", "market-data", "portfolio", "backtesting", "west-africa"]
dependencies = [
    "aiosqlite>=0.22.1",
    "bs4>=0.0.2",
    "fastapi>=0.135.3",
    "httpx[http2]>=0.28.1",
    "lxml>=6.0.4",
    "pandas>=3.0.2",
    "playwright>=1.58.0",
    "pydantic>=2.13.1",
    "python-dotenv>=1.2.2",
    "rich>=14.2.0",
    "sqlalchemy>=2.0.49",
    "tenacity>=9.1.4",
    "typer>=0.24.1",
    "uvicorn>=0.44.0",
]

[project.urls]
Homepage = "https://github.com/naofal/brvm-package"
Repository = "https://github.com/naofal/brvm-package"
Documentation = "https://github.com/naofal/brvm-package#readme"

[project.optional-dependencies]
plotting = [
    "matplotlib>=3.9.0",
]

[project.scripts]
brvm = "brvm_package.cli.main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["brvm_package", "brvm_package.*", "brvm", "brvm.*"]

[tool.setuptools.package-data]
brvm_package = ["py.typed", "resources/*.sqlite3"]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv", "tests/"]

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = [".venv", "tests/"]

